# fastAPI-template

./: .dockerignore  .editorconfig  .env_example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_README.rst  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
docs/: ARCHITECTURE.md  ARCHITECTURE_README.md  BRANCH.md  COMMIT.md  DEV_ENVIRONMENT.md  InstallDependencies.md
fastapi_template/: __init__.py  config.py  database.py  models.py  routers.py
fastapi_template/auth/: models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/auth/: services.py
